--- a/style.css
+++ b/style.css
@@ -1,1 +1,47 @@
-body {margin: 0 auto}
+font {
+    font-family: 'Noto Sans', sans-serif;
+}
+
+.header {
+    border: 1px solid rgb(60, 0, 255);
+}
+
+.main {
+    border: 1px solid rgb(60, 0, 255);
+}
+
+.footer {
+    border: 1px solid rgb(60, 0, 255);
+}
+
+body {
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+.nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    transition: .3s;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
